# LocalRestaurants

./: .gitignore  Cargo.toml  README.md  Restaurants.csv  app.R  script.R  server.R  ui.R
scripts/: script.R
ui/: Cargo.toml  README.md  index.html
ui/src/: main.rs  styles.rs
ui/src/components/: control.rs  map.rs  mod.rs
