[package]
name = "local-restaurants-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stylist = { version = "0.13.0", features = ["yew", "yew_integration"] }
yew = { version = "0.21.0", features = ["csr"] }

