[package]
name = "local-restaurants-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.3.0"
gloo-utils = "0.2.0"
leaflet = "0.2.3"
stylist = { version = "0.13.0", features = ["yew", "yew_integration", "parser"] }
wasm-bindgen = "0.2.87"
web-sys = "0.3.64"
yew = { version = "0.21.0", features = ["csr"] }

